Added box model notes

--- a/Front End Learning/CSS Positioning/index.html
+++ b/Front End Learning/CSS Positioning/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Front-End Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>The Box Model</h1>
+    <!--Note: A div is a block lvl elemnent, meaning it takes full width of the page! -->
+    <div class="w3-boxmodel">
+        <div class="margin">Margin
+            <div class="border w3-theme">Border
+                <div class="padding">Padding
+                    <div class="content">Content
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
